--- a/main.html
+++ b/main.html
@@ -201,7 +201,7 @@
 
 
     </footer>
-    <script>
+    <!-- <script>
         $('.navbar a[href^="#"]').on('click', function (event) {
             let target = $(this.getAttribute('href'));
             if (target.length) {
@@ -219,7 +219,7 @@
                 opacity: 0
             }, 600)
         }, 1200);
-    </script>
+    </script> -->
 </body>
 
 </html>
