--- a/Specifications/spec.html
+++ b/Specifications/spec.html
@@ -194,7 +194,7 @@
 
 
 
-    <script>
+    <!-- <script>
         $('.navbar a[href^="#"]').on('click', function (event) {
             let target = $(this.getAttribute('href'));
             if (target.length) {
@@ -212,7 +212,7 @@
                 opacity: 0
             }, 600)
         }, 1200);
-    </script>
+    </script> -->
 </body>
 
 </html>
