--- a/main.html
+++ b/main.html
@@ -96,13 +96,13 @@
                         <img src="images/flashlight-front.png" alt="flash">
                     </div>
                     <div class='line left-bottom'>
-                        <img src="./images/tire-front.png" alt="tire">
+                        <img src="images/tire-front.png" alt="tire">
                     </div>
                     <div class='line right-top'>
-                        <img src="/images/mirror-front.png" alt="mirror">
+                        <img src="images/mirror-front.png" alt="mirror">
                     </div>
                     <div class='line right-bottom'>
-                        <img src="/images/halogen-front.png" alt="halogen">
+                        <img src="images/halogen-front.png" alt="halogen">
                     </div>
                     <img src="images/front-h7.png" alt="front-h7">
                 </div>
