--- a/Specifications/spec.html
+++ b/Specifications/spec.html
@@ -19,9 +19,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="/main-styles.css">
-    <link rel="stylesheet" type="text/css" href="/Gallery/style.css">
-    <link rel="stylesheet" type="text/css" href="/Specifications/specifications.css">
+    <link rel="stylesheet" type="text/css" href="../main-styles.css">
+    <link rel="stylesheet" type="text/css" href="../Gallery/style.css">
+    <link rel="stylesheet" type="text/css" href="../Specifications/specifications.css">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,400&display=swap" rel="stylesheet">
@@ -41,16 +41,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                             <li class="nav-item">
-                                    <a class="nav-link" href="../main.html" rel=”noopener”>Home</a>
+                                    <a class="nav-link" href="../index.html" rel=”noopener”>Home</a>
                                 </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/Specifications/spec.html" rel=”noopener”>Specifications</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Gallery/gallery.html" rel=”noopener”>Gallery</a>
+                            <a class="nav-link" href="../Gallery/gallery.html" rel=”noopener”>Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Call/contact.html" rel=”noopener”>Contact</a>
+                            <a class="nav-link" href="../Call/contact.html" rel=”noopener”>Contact</a>
                         </li>
                     </ul>
                 </div>
