--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                             <a class="nav-link" href="main.html" rel=”noopener”>Home</a>
                         </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./Specifications/spec.html" rel=”noopener”>Specifications</a>
+                    <a class="nav-link" href="/Specifications/spec.html" rel=”noopener”>Specifications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./Gallery/gallery.html" rel=”noopener”>Gallery</a>
+                    <a class="nav-link" href="/Gallery/gallery.html" rel=”noopener”>Gallery</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./Call/contact.html" rel=”noopener”>Contact</a>
+                    <a class="nav-link" href="/Call/contact.html" rel=”noopener”>Contact</a>
                 </li>
             </ul>
         </div>
@@ -197,10 +197,10 @@
             </div>
             <div class='col'>
                 <ul>
-                    <li><a href="#" rel=”noopener”><img src="./images/social1.png" alt="Q"></a></li>
-                    <li><a href="#" rel=”noopener”><img src="./images/social2.png" alt="W"></a></li>
-                    <li><a href="#" rel=”noopener”><img src="./images/social3.png" alt="E"></a></li>
-                    <li><a href="#" rel=”noopener”><img src="./images/social4.png" alt="R"></a></li>
+                    <li><a href="#" rel=”noopener”><img src="../images/social1.png" alt="Q"></a></li>
+                    <li><a href="#" rel=”noopener”><img src="../images/social2.png" alt="W"></a></li>
+                    <li><a href="#" rel=”noopener”><img src="../images/social3.png" alt="E"></a></li>
+                    <li><a href="#" rel=”noopener”><img src="../images/social4.png" alt="R"></a></li>
                 </ul>
             </div>
         </div>
