--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -45,16 +45,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                                 <li class="nav-item">
-                                        <a class="nav-link" href="../index.html" rel=”noopener”>Home</a>
+                                        <a class="nav-link" href="../main.html" rel=”noopener”>Home</a>
                                     </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../Specifications/spec.html" rel=”noopener”>Specifications</a>
+                                <a class="nav-link" href="/Specifications/spec.html" rel=”noopener”>Specifications</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./Gallery/gallery.html" rel=”noopener”>Gallery</a>
+                                <a class="nav-link" href="/Gallery/gallery.html" rel=”noopener”>Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../Call/contact.html" rel=”noopener”>Contact</a>
+                                <a class="nav-link" href="/Call/contact.html" rel=”noopener”>Contact</a>
                             </li>
                         </ul>
                     </div>
