--- a/Specifications/spec.html
+++ b/Specifications/spec.html
@@ -58,7 +58,7 @@
 
     <section class='subpage-head'>
         <div class='container'>
-            <h1><span>OUD H7</span><br>GALLERY</h1>
+            <h1><span>OUD H7</span><br>SPECIFICATIONS</h1>
             <p><span>Home</span> / Specifications</p>
         </div>
     </section>
