tweak's & video icon

--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -53,7 +53,7 @@
                                 <a class="nav-link" href="../Specifications/spec.html" rel=”noopener”>Specifications</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./Gallery/gallery.html" rel=”noopener”>Gallery</a>
+                                <a class="nav-link" href="/Gallery/gallery.html" rel=”noopener”>Gallery</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../Call/contact.html" rel=”noopener”>Contact</a>
@@ -92,9 +92,12 @@
                 <div class="row">
                     <div class="col-3 a"></div>
                     <div class="col-3 b"></div>
-                    <div class="col-6"></div>
+                    <div class="col-6">
+                        <a href="https://www.youtube.com/" rel=”noopener” target="_blank"><img src="./images\video.png" alt="video"></a>
+                    </div>
                     <div class="w-100"></div>
-                    <div class="col-3 c"></div>
+                    <div class="col-3 c">
+                    </div>
                     <div class="col-3 d"></div>
                 </div>
             </div>
