--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                     <li class="nav-item">
-                            <a class="nav-link" href="main.html" rel=”noopener”>Home</a>
+                            <a class="nav-link" href="index.html" rel=”noopener”>Home</a>
                         </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Specifications/spec.html" rel=”noopener”>Specifications</a>
